# hard_work_notes

./: .gitignore  tests_snippet.py
cyclomatic_complexity/: take_1_reflection.md  take_2_refactored.py  take_3_initial.go  take_3_reflection.md
orm-benchmark/: pure-sql-inserts.py  pure-sql-select-all.py  pyproject.toml  tortoise-orm-inserts.py  tortoise-orm-select-all.py
refactoring_and_clean_code_excs/clean_code_2/: task.md
refactoring_and_clean_code_excs/factorization/: task.md
refactoring_and_clean_code_excs/fools_ensurance/: examples.md
refactoring_and_clean_code_excs/refactoring_samples/: codeline_srp.py  intersections_2.py
refactoring_and_clean_code_excs/refactoring_samples/full_fledged_refactoring/first/: after.py  before.py
refactoring_and_clean_code_excs/three_rules_of_clean_project_design/: task.md
regactoring_and_clean_code_excs/refactoring_samples/: intersections_1.py
regactoring_and_clean_code_excs/three_rules_of_clean_project_design/: task.md
small_things/: mixin_usage_exmpl.py
task_1_cyclomatic_complexity/: take_1_initial.py  take_1_refactored.py  take_1_reflection.md  take_2_initial.py  take_2_reflection.md  take_3_refactored.go  take_3_reflection.md
task_2_fuzzing/atheris_playground/: diff-fuzz-email-validator.py  fuzz-beautifulsoup.py  pyproject.toml
task_2_fuzzing/atheris_playground/email_fuzz/: crash-e16d372bf5a00761155e8f1688151a3e1254e682
task_2_fuzzing/atheris_playground/soup_crashes/: crash-388ab30f45c3bf7cd7aeee3ef0062ba5c8238d01
task_2_fuzzing/pythonfuzz_playground/: pyproject.toml
task_2_fuzzing/pythonfuzz_playground/pythonfuzz_samples/: fuzz_pyasn1.py
task_3_tdd_ddd/tdd/: conftest.py  pyproject.toml  tasks.db
task_3_tdd_ddd/tdd/models/: task.py
task_3_tdd_ddd/tdd/package/: test_task_tracker.py  tracker.py
task_3_tdd_ddd/tdd/storage/: db.py  test_db.py
visitor_1/: content.py
visitor_1/dumb/: content.py
visitor_1/dump/: main.py  pyproject.toml
visitor_1/dump/templates/: article.html  index.html  video.html
visitor_1/templates/: image.html
